Bug 262484 - Possible to delete trash folder and other default Local Folders subfolders
Summary: Possible to delete trash folder and other default Local Folders subfolders
Status: RESOLVED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-08 03:00 UTC by Sabine Faure
Modified: 2011-05-15 11:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2011-01-08 03:00:58 UTC
Version:           unspecified (using Devel) 
OS:                Linux

It is possible to delete the trash folder and other default Local Folders subfolders such as sent-mail, templates and outbox whereas this is impossible in Kmail Desktop version.

Reproducible: Always

Steps to Reproduce:
- Launch Kmail-mobile
- Click on 'Local Folders'
- Click on 'trash'
- Open the 'Actions' tab
- Click on 'Edit'
- Click on 'Delete Folder'
- A pop up 'Delete folder?' dialogue appears saying: 'Do you really want to delete this folder and all its sub-folders?'

Actual Results:  
I did not dare to click on 'Delete' because I do not know how to get the trash folder back if I delete it but it should work and delete the trash folder.

This will be problematic for the user who might delete it by mistake.


Expected Results:  
The 'Delete Folder' functionality should not be available from the 'Actions' tab for the following Local Folders subfolders:
* inbox
* drafts
* outbox
* sent-mail
* templates
* trash

In Kmail Desktop version it is impossible to delete those subfolders and I think it should be the same in Kmail-mobile to avoid the user deleting them by mistake and loosing important stored emails (ex: templates).

N900, 4:4.6~.20110106.1209.gitfde48d5-1maemo1.121147
Comment 1 Tobias Koenig 2011-01-10 14:45:01 UTC
SVN commit 1213472 by tokoe:

Disable 'Delete Collections' action for system folders

Do not allow to delete system folders (e.g. inbox, sent-mail, outbox)
by disabling the actions.

BUG: 262484


 M  +14 -0     standardmailactionmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1213472
Comment 2 Sabine Faure 2011-01-20 18:22:30 UTC
Hi Tobias!

It is corrected now.

It is now impossible to delete those folders: inbox, drafts, outbox, sent-mail, templates and trash.

The 'Delete Folders' option is not available (= greyed) from the 'Actions' tab - Edit so I am closing this bug.

N900, 4:4.6~.20110118.1600.git254268b-1maemo1.121498
Comment 3 Tobias Koenig 2011-05-15 11:36:40 UTC
Git commit 32a6105ed88c22c0078e94d740fc616b4a87bc76 by Tobias Koenig.
Committed on 10/01/2011 at 14:43.
Pushed by tokoe into branch '4.6'.

Disable 'Delete Collections' action for system folders

Do not allow to delete system folders (e.g. inbox, sent-mail, outbox)
by disabling the actions.

BUG: 262484

svn path=/trunk/KDE/kdepimlibs/; revision=1213472
(cherry picked from commit 2fbc331bd161aec9147dbd4861c72eb972ebc413)

M  +14   -0    akonadi/kmime/standardmailactionmanager.cpp     

http://commits.kde.org/kdepimlibs/32a6105ed88c22c0078e94d740fc616b4a87bc76