Disable 'Delete Collections' action for system folders

Do not allow to delete system folders (e.g. inbox, sent-mail, outbox)
by disabling the actions.

BUG: 262484

svn path=/trunk/KDE/kdepimlibs/; revision=1213472